adminSiteClient/admin.scss
/* ... */
.GdocsSettingsForm {
    .edit-in-gdocs {
        position: relative;

        a {
            background-color: rgb(24, 144, 255, 0.8);
            position: absolute;
            top: 0;
            right: 0;
            bottom: 0;
            left: 0;
            z-index: 1;
            display: flex;
            align-items: center;
            justify-content: center;
            color: white;
            text-decoration: none;
            transition: all 0.2s;
            opacity: 0;
        }

        &:hover a {
            opacity: 1;
        }
    }
}

.input-group-append,
.input-group-prepend {
    .btn {
        z-index: 0;
    }
}

.PostsIndexPage {
    .button-with-margin {
        margin: 1px;
    }
}

.TagsIndexPage__header {
    display: flex;
    justify-content: space-between;
    p {
        line-height: 32px;
        margin: 0;
    }
}

.TagsIndexPage__add-tag-modal {
    input {
        margin-bottom: 1rem;
        display: block;
    }
}

.ImageIndexPage {
    @media (max-width: 1300px) {
        padding-left: 0 !important;
        padding-right: 0 !important;
        .ant-table-cell {
            padding-left: 4px !important;
            padding-right: 4px !important;
        }
    }
    .ImageIndexPage__delete-user-button {
        border-radius: 50%;
        margin-left: 8px;
        height: 16px;
        font-size: 0.8em;
        align-items: center;
        display: inline-flex;
        width: 16px;
        vertical-align: -2px;
    }

    .ImageIndexPage__update-image-button {
        color: #007bff;
        margin-bottom: 8px;
    }

    .ImageIndexPage__alt-text-editor {
        textarea {
            border-radius: 6px;
            position: relative;
            border: 1px solid #ccc;
            width: 100%;
            &.ImageIndexPage__alt-text-editor--should-autosize {
                field-sizing: content;
            }
        }
    }

    .ImageIndexPage__unsaved-chip {
        color: gray;
        background-color: lightgray;
        padding: 2px 4px;
        border-radius: 3px;
        font-size: 10px;
        text-transform: uppercase;
        display: inline-block;
        top: -2px;
        position: relative;
    }
}

.ImageIndexPage__usage-chip {
    background-color: #ddd;
    padding: 2px 4px;
    display: inline-block;
    border-radius: 50%;
    font-size: 12px;
    font-weight: bold;
    line-height: 12px;
}

.ImageIndexPage__usage-list {
    max-width: 300px;
    padding-left: 16px;
    margin-top: -8px;
    margin-bottom: 0;
}

.DataInsightIndexPage {
    .ant-card-body {
        padding: 8px;

        a {
            color: rgba(0, 0, 0, 0.88);
        }
    }

    img.border {
        border: 1px solid rgb(240, 240, 240) !important;
    }
}

.EditorReferencesTab .ReferencesDataInsights {
    li {
        display: flex;
        gap: 1em;

        a {
            flex-grow: 1;
        }

        button {
            min-width: 144px;
        }
    }
}

.di-modal-content {
    margin: 16px 0 24px 0;

    > div {
        margin-bottom: 12px;
    }

    .side-by-side-preview {
        margin-top: 6px;
    }

    .loading-image.placeholder,
    .loading-image.error {
        width: 350px;
        height: 350px;
        border: 1px solid #f0f0f0;
    }

    .loading-image.placeholder {
        padding: 8px;
        display: flex;
        justify-content: center;
        align-items: center;
        font-size: 16px;
    }

    .loading-image.error {
        font-size: 14px;
        display: block;
        padding: 12px;
    }

    .form {
        margin-top: 24px;

        .form-item.image-alt-text {
            margin-bottom: 0;
        }

        .form-submit {
            margin-top: 24px;
            text-align: right;
        }
    }

    .image-preview {
        margin: 24px 0;

        h3 {
            font-size: 1em;
            font-weight: 400;
            margin-bottom: 12px;
        }
    }

    .feedback-box {
        padding: 24px;
        background: #f5f5f5;
        margin-top: 36px;
        border-radius: 4px;

        h2 {
            font-size: 1em;
            margin-bottom: 12px;
        }

        p {
            margin: 12px 0 0 0;
        }

        ul {
            padding-left: 1em;
            margin: 0;
        }

        li {
            line-height: 1.5;
        }

        li,
        p {
            // add a little margin before the feedback tag
            span:first-of-type {
                margin-right: 12px;
            }
        }

        li + li {
            margin-top: 0.25em;
        }
    }

    .feedback-tag {
        padding: 2px 4px;
        border-radius: 4px;
        border-width: 1px;
        border-style: solid;

        svg {
            margin-right: 4px;
        }

        &.success {
            border-color: rgba(114, 194, 64, 0.6);
            background: rgb(246, 255, 237);

            svg {
                color: rgb(114, 194, 64);
            }
        }

        &.error {
            border-color: rgba(236, 91, 86, 0.6);
            background: rgb(255, 242, 240);

            svg {
                color: rgb(236, 91, 86);
            }
        }
    }
}

// Make the x/y dropdown in the comparison line editor narrow
.comparisonLine .form-group:first-of-type {
    flex-grow: 0;
    flex-basis: 65px;
}

.multi-dim-preview {
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: #f5f5f5;
    border: 2px dashed #d9d9d9;
    color: #8c8c8c;
    font-size: 14px;
    transition: all 0.2s ease;
    border-radius: 4px;
    padding: 8px;
    text-align: center;
    height: 140px;
    width: 200px;

    &:hover {
        border-color: #40a9ff;
        background-color: #f0f8ff;
        color: #40a9ff;
    }
}

.multi-dim-preview-link:hover {
    text-decoration: none;
}

.multi-dim-preview-img {
    height: 140px;
    width: 200px;
}

.ImageReplaceConfirmModal__content {
    margin: 16px 0 24px 0;
}
/* ... */

